import type { FC } from 'react';
import type { SvgProps } from 'react-native-svg';

export enum JobCategory {
  PLUMBING = 'Plumbing',
  ELECTRICAL = 'Electrical',
  CARPENTRY = 'Carpentry',
  MECHANICS = 'Mechanics',
  PAINTING = 'Painting',
  CLEANING = 'Cleaning',
  HVAC = 'HVAC',
...
